<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_event_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Date_Event"
                android:textSize="@dimen/text_low_size"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/add_to_calendar_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_add_match_to_calendar"
                style="?attr/actionModeCloseButtonStyle"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/time_event_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Time_Event"
            android:textSize="@dimen/text_low_size"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/home_team_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/home_score_tv"
                android:gravity="center_horizontal"
                android:text="@string/Home_Team"
                android:textSize="@dimen/text_mid_size"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/home_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/vs_tv"
                android:text="@string/Zero"
                android:textSize="@dimen/text_high_size"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/vs_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:text="@string/VS"
                android:textSize="@dimen/text_low_size"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/away_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/vs_tv"
                android:text="@string/Zero"
                android:textSize="@dimen/text_high_size"
                android:textColor="@color/colorGray"/>

            <TextView
                android:id="@+id/away_team_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/away_score_tv"
                android:gravity="center_horizontal"
                android:text="@string/Away_Team"
                android:textSize="@dimen/text_mid_size"
                android:textColor="@color/colorGray"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>